# home-cli

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  hue_setup.py  presets.json  pyproject.toml  setup.sh  start_homebridge.sh
.git-hooks/: pre-commit
config/: location.json  presets.json  schedules.json  sun_schedules.json
homebridge/: Dockerfile  config.json  package-lock.json  package.json
server/: app.py  hue.py  llm.py  logger.py  presence.py  presets.py  scheduler.py  state.py  sun.py  switchbot.py
src/home_cli/: hue.py  main.py  presets.py  server.py  state_manager.py  switchbot.py
